Fixing chat messages word wrap and changing page title

--- a/static/style/main.css
+++ b/static/style/main.css
@@ -125,9 +125,6 @@ h1.title {
 }
 
 .panel-info > .panel-heading {
-  /*background-color: #8f7a66;
-  border-color: #8f7a66;
-  color: #776e65;*/
   color: white;
   background-color: #bbada0;
   border-color: #bbada0;
@@ -142,6 +139,13 @@ h1.title {
 
 .bold-font{
   font-weight: bold;
+}
+
+.word-wrap {
+   white-space: pre-wrap;      /* CSS3 */
+   white-space: -moz-pre-wrap; /* Firefox */
+   white-space: -o-pre-wrap;   /* Opera 7 */
+   word-wrap: break-word;      /* IE */
 }
 
 p {
